daily_movement, weekly_movement, country,instrumentalness

--- a/Projeto.ipynb
+++ b/Projeto.ipynb
@@ -6,18 +6,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\henri\\AppData\\Local\\Temp\\ipykernel_4700\\131758281.py:7: DeprecationWarning: load_dataset is deprecated and will be removed in future version.\n",
-      "  df = kagglehub.load_dataset(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.10), please consider upgrading to the latest version (0.3.11).\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'kagglehub'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkagglehub\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkagglehub\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m KaggleDatasetAdapter\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'kagglehub'"
      ]
     }
    ],
@@ -624,6 +620,144 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variação de Músicas que mais variaram em relação ao dia anterior\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.hist(df['daily_movement'], bins=range(df['daily_movement'].min(), df['daily_movement'].max() + 1),\n",
+    "         color='skyblue', edgecolor='black', align='left')\n",
+    "\n",
+    "plt.title('Frequência de Variações Diárias no Ranking')\n",
+    "plt.xlabel('Variação no Ranking (daily_movement)')\n",
+    "plt.ylabel('Número de Músicas')\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Contar quantas músicas têm cada valor de variação (diária)\n",
+    "contagem_variacoes = df['daily_movement'].value_counts().sort_index()\n",
+    "\n",
+    "# Printar de forma organizada\n",
+    "print(\"Variação no Ranking | Quantidade de Músicas\")\n",
+    "for variacao, qtd in contagem_variacoes.items():\n",
+    "    print(f\"{variacao} | {qtd}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variação de Músicas que mais variaram em relação a semana anterior\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.hist(df['weekly_movement'], bins=range(df['weekly_movement'].min(), df['weekly_movement'].max() + 1), \n",
+    "         color='skyblue', edgecolor='black', align='left')\n",
+    "\n",
+    "plt.title('Frequência de Variações Diárias no Ranking')\n",
+    "plt.xlabel('Variação no Ranking (weekly_movement)')\n",
+    "plt.ylabel('Número de Músicas')\n",
+    "\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Contar quantas músicas têm cada valor de variação (semanal)\n",
+    "contagem_variacoes = df['weekly_movement'].value_counts().sort_index()\n",
+    "\n",
+    "# Printar de forma organizada\n",
+    "print(\"Variação no Ranking | Quantidade de Músicas\")\n",
+    "for variacao, qtd in contagem_variacoes.items():\n",
+    "    print(f\"{variacao} | {qtd}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dados dos 25 países com mais músicas\n",
+    "top_countries = df['country'].value_counts(dropna=True).head(25)\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "top_countries.plot(kind='bar', color='skyblue', edgecolor='black')\n",
+    "\n",
+    "plt.yscale('log')  # Escala logarítmica\n",
+    "\n",
+    "plt.title('Top 25 Países com Mais Músicas no Top 50 (Escala Log)', fontsize=14)\n",
+    "plt.xlabel('País', fontsize=12)\n",
+    "plt.ylabel('Número de Músicas (log)', fontsize=12)\n",
+    "plt.xticks(rotation=45, ha='right')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# Países com mais músicas.\n",
+    "print(\"\\n Países com mais músicas:\")\n",
+    "print(df['country'].value_counts(dropna=True).head(25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Distribuição de músicas com e sem vocais.\n",
+    "print(\"\\n Distribuição de músicas com e sem vocais:\")\n",
+    "df['vocals'] = df['instrumentalness'].apply(lambda x: 'Instrumental' if x > 0.5 else 'Com vocais')\n",
+    "print(df['vocals'].value_counts())\n",
+    "\n",
+    "# Contando quantas músicas em cada categoria\n",
+    "vocals_count = df['vocals'].value_counts()\n",
+    "\n",
+    "# Criando o gráfico\n",
+    "plt.figure(figsize=(6, 5))\n",
+    "vocals_count.plot(kind='bar', color=['mediumseagreen', 'mediumpurple'], edgecolor='black')\n",
+    "\n",
+    "# Títulos e rótulos\n",
+    "plt.title('Distribuição de Músicas com e sem Vocais', fontsize=14)\n",
+    "plt.xlabel('Tipo de Música', fontsize=12)\n",
+    "plt.ylabel('Número de Músicas', fontsize=12)\n",
+    "plt.xticks(rotation=0)\n",
+    "\n",
+    "# Adiciona os valores nas barras\n",
+    "for i, value in enumerate(vocals_count):\n",
+    "    plt.text(i, value + value * 0.01, str(value), ha='center', va='bottom', fontsize=10)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -654,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
